Tools being displayed and styled. Basic props setup

--- a/vuebuild/index.html
+++ b/vuebuild/index.html
@@ -2,10 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>gathering</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+    <title>Vue Game Board</title>
+    <link rel="profile" href="http://gmpg.org/xfn/11">
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="32x32" href="favicons/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon.png">
+    <link rel="manifest" href="/favicons/site.webmanifest">
+    <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#98c4F3">
+    <meta name="msapplication-TileColor" content="#98c4F3">
+    <meta name="theme-color" content="#98c4F3">
+
+    <!-- Bootstrap 4 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- See Also: https://bootstrap-vue.js.org	-->
   </head>
   <body>
     <div id="app"></div>
+    <link rel="stylesheet" id="font-awesome"  href="styles/fontawesome.min.css" type="text/css" media="all" />
     <script src="/dist/build.js"></script>
   </body>
 </html>
+
+
+
