Painting Working! lodash library imported

--- a/vuebuild/index.html
+++ b/vuebuild/index.html
@@ -22,7 +22,10 @@
   </head>
   <body>
     <div id="app"></div>
+
     <link rel="stylesheet" id="font-awesome"  href="styles/fontawesome.min.css" type="text/css" media="all" />
+
+		<script type='text/javascript' src='vendor/astar.js' defer></script>
     <script src="/dist/build.js"></script>
   </body>
 </html>
