--- a/vuebuild/index.html
+++ b/vuebuild/index.html
@@ -10,22 +10,23 @@
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="32x32" href="favicons/favicon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon.png">
-    <link rel="manifest" href="/favicons/site.webmanifest">
+    <!-- <link rel="manifest" href="/favicons/site.webmanifest"> -->
     <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#98c4F3">
     <meta name="msapplication-TileColor" content="#98c4F3">
     <meta name="theme-color" content="#98c4F3">
 
-    <!-- Bootstrap 4 -->
+    <!-- Bootstrap 4 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    -->
     <!-- See Also: https://bootstrap-vue.js.org	-->
   </head>
   <body>
     <div id="app"></div>
 
     <link rel="stylesheet" id="font-awesome"  href="styles/fontawesome.min.css" type="text/css" media="all" />
-
-		<script type='text/javascript' src='vendor/astar.js' defer></script>
+<!--
+    <script type='text/javascript' src='vendor/astar.js' defer></script>
+-->
     <script src="/dist/build.js"></script>
   </body>
 </html>
